fix modal open jump

--- a/asset/75/css/Cobstyle.css
+++ b/asset/75/css/Cobstyle.css
@@ -158,6 +158,12 @@ html, body {
 body {
 	overflow-x: hidden;
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	padding-right: 0 !important;
+	margin-right: 0 !important;
+}
+
+body.modal-open {
+	overflow: auto;	
 }
 
 a:hover {
